--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,9 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "back-end directory for PennLFG, a MERN-stack app",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
