--- a/back-end/package.json
+++ b/back-end/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/cis350/Team-8-alain-sem-adam-abhinav-gabe#readme",
   "dependencies": {
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jsdoc": "^4.0.2",
