--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jsdoc": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0"
   },
   "devDependencies": {
