--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DB_URL=https://data.mongodb-api.com/app/data-ypskn/endpoint/data/v1
-PORT=
+DB_URL="mongodb+srv://anomani:Maks.9611@cluster0.9bbthce.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
