--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jsdoc": "^4.0.2",
