--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+KEY="jsonwebtokenkey"
 DB_URL="mongodb+srv://anomani:Maks.9611@cluster0.9bbthce.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
