--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/"
   },
   "jest": {
     "testEnvironment": "node"
@@ -30,13 +31,18 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jsdoc": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.0.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
