--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.0.0",
     "axios-mock-adapter": "^1.22.0",
+    "cypress": "^13.9.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
